k8s/02-databases.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-db
spec:
  ports:
    - port: 5432
  selector:
    app: inventory-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: inventory-db
spec:
  serviceName: inventory-db
  replicas: 1
  selector:
    matchLabels:
      app: inventory-db
  template:
    metadata:
      labels:
        app: inventory-db
    spec:
      containers:
      - name: db
        image: 361990119373.dkr.ecr.eu-north-1.amazonaws.com/inventory-db:latest
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: billing-db
spec:
  ports:
    - port: 5432
  selector:
    app: billing-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: billing-db
spec:
  serviceName: billing-db
  replicas: 1
  selector:
    matchLabels:
      app: billing-db
  template:
    metadata:
      labels:
        app: billing-db
    spec:
      containers:
      - name: db
        image: 361990119373.dkr.ecr.eu-north-1.amazonaws.com/billing-db:latest
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: rabbit-queue
spec:
  ports:
    - port: 5672
  selector:
    app: rabbit-queue
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbit-queue
spec:
  serviceName: rabbit-queue
  replicas: 1
  selector:
    matchLabels:
      app: rabbit-queue
  template:
    metadata:
      labels:
        app: rabbit-queue
    spec:
      containers:
      - name: rabbitmq
        image: 361990119373.dkr.ecr.eu-north-1.amazonaws.com/rabbit-queue:latest
        ports:
        - containerPort: 5672
