k8s/03-apps.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-app
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: inventory-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-app
  template:
    metadata:
      labels:
        app: inventory-app
    spec:
      containers:
      - name: app
        image: 361990119373.dkr.ecr.eu-north-1.amazonaws.com/inventory-app:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: billing-app
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: billing-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing-app
  template:
    metadata:
      labels:
        app: billing-app
    spec:
      containers:
      - name: app
        image: 361990119373.dkr.ecr.eu-north-1.amazonaws.com/billing-app:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  ports:
    - name: app
      port: 3000
      targetPort: 3000
    - name: web
      port: 80 # Route port 80 traffic to 3000 internally
      targetPort: 3000
  selector:
    app: api-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: app
        image: 361990119373.dkr.ecr.eu-north-1.amazonaws.com/api-gateway:latest
        ports:
        - containerPort: 3000
